--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               </p>
 
               <a
-                href="https://pedroftdev.github.io/Responsive-Lamp-Website/"
+                href="https://sunshinelamp.vercel.app/"
                 rel="noopener"
                 target="_blank"
                 id="lamp"
