--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 Linkedin
               </a>
               <a
-              href="https://github.com/PedroFTDev"
+              href="https://github.com/PedroTortoriello"
               rel="noopener"
               target="_blank"
               class="delayExtraBigReveal"
@@ -151,7 +151,7 @@
                   ></a>
 
                   <a
-                    href="https://github.com/PedroFTDev"
+                    href="https://github.com/PedroTortoriello"
                     rel="noopener"
                     target="_blank"
                     ><li>
