--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
             </article>
 
             <article class="intervalCardReveal To-do-App">
-              <h3>To-Do App</h3>
+              <h3>Travel Website</h3>
               <p>
-                Site para organizar as tarefas diárias, feito em HTML, CSS e JavaScript.
+                Site de agência de viagens.
               </p>
               <a
-                href="https://pedroftdev.github.io/To-do-App/"
+                href="https://triptour.vercel.app/"
                 rel="noopener"
                 target="_blank"
                 id="To-Do-App"
