--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+                  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9JXTMWC82E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9JXTMWC82E');
+  </script>
+  
     <meta charset="UTF-8" />
     <meta name="author" content="Pedro Tortoriello" />
     <meta
@@ -222,7 +232,7 @@
               </p>
 
               <a
-                href="https://pedroftdev.github.io/Responsive-Lamp-Website/"
+                href="https://sunshinelamp.vercel.app/"
                 rel="noopener"
                 target="_blank"
                 id="lamp"
