--- a/index.html
+++ b/index.html
@@ -208,40 +208,21 @@
         <div class="grid-layout">
           <h2 class="delaySmallReveal">Projetos <span>.</span></h2>
           <div id="projects">
-            <article class="intervalCardReveal Barbearia">
-              <h3>Barbearia Tortoriello</h3>
+            <article class="intervalCardReveal coffee">
+              <h3>Cafeteria</h3>
               <p>
-                Site de uma barbearia, feito em HTML, CSS e
-                JavaScript.
+                Site de uma cafeteria gourmet, feita com HTML, CSS, Sass e Javascript
               </p>
 
               <a
-                href="https://pedroftdev.github.io/Barbearia/"
+                href="https://gourmet-coffee.vercel.app/"
                 rel="noopener"
                 target="_blank"
-                id="Barber"
+                id="coffee"
                 >Visualizar projeto
               </a>
             </article>
 
-<<<<<<< HEAD
-            <article class="intervalCardReveal Restaurante">
-              <h3>Lamp Website</h3>
-              <p>
-                E-commerce website of lamps
-              </p>
-
-              <a
-                href="https://sunshinelamp.vercel.app/"
-                rel="noopener"
-                target="_blank"
-                id="lamp"
-                >Visualizar projeto
-              </a>
-            </article>
-
-=======
->>>>>>> 1d27a0b96dc3f154e1f32fda56f2b8e0ea69fab4
             <article class="intervalCardReveal To-do-App">
               <h3>Travel Website</h3>
               <p>
@@ -251,13 +232,13 @@
                 href="https://triptour.vercel.app/"
                 rel="noopener"
                 target="_blank"
-                id="To-Do-App"
+                id="trip-tour"
                 >Visualizar projeto
               </a>
             </article>
           </div>
           <a
-            href="https://github.com/PedroFTDev?tab=repositories"
+            href="https://github.com/PedroTortoriello?tab=repositories"
             rel="noopener"
             target="_blank"
             class="delayExtraBigReveal"
