--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <article class="intervalCardReveal coffee">
               <h3>Cafeteria</h3>
               <p>
-                Site de uma cafeteria gourmet, feita com HTML, CSS, Sass e Javascript
+                Site de uma cafeteria gourmet
               </p>
 
               <a
@@ -223,7 +223,7 @@
               </a>
             </article>
 
-            <article class="intervalCardReveal To-do-App">
+            <article class="intervalCardReveal trip-tour">
               <h3>Travel Website</h3>
               <p>
                 Site de agência de viagens.
@@ -237,6 +237,7 @@
               </a>
             </article>
           </div>
+          
           <a
             href="https://github.com/PedroTortoriello?tab=repositories"
             rel="noopener"
