--- a/index.html
+++ b/index.html
@@ -277,9 +277,7 @@
           <div id="skills">
             <article id="skills-text">
               <h2 class="delaySmallReveal">Conhecimentos <span>.</span></h2>
-              <p class="delayMediumReveal changeDescription">
-                *passe o cursor do mouse no card para ler*
-              </p>
+              <p>Tecnologias</p>
             </article>
 
             <div id="skills-cards">
