--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="home-container-text">
               <h1 class="delayMediumReveal">
                 Ajudando empresas a construírem
-                <span>produtos digitais</span> de forma moderna e de alta
+                <span>produtos digitais</span> de forma moderna e com alta
                 qualidade.
               </h1>
               <p class="typewriter">
