--- a/index.html
+++ b/index.html
@@ -236,6 +236,20 @@
                 >Visualizar projeto
               </a>
             </article>
+
+            <article class="intervalCardReveal barbearia">
+              <h3>Mietto Barbearia</h3>
+              <p>
+                Freelancer de uma barbearia
+              </p>
+              <a
+                href="https://mietto-barbearia.vercel.app/"
+                rel="noopener"
+                target="_blank"
+                id="barbearia"
+                >Visualizar projeto
+              </a>
+            </article>
           </div>
           
           <a
